k8s/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: bankingcommonsrv
  labels:
    app: bankingcommonsrv
spec:
  replicas: 1
  selector:
    name: bankingcommonsrv
    app: bankingcommonsrv
    servicetype: backend
    version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        name: bankingcommonsrv
        app: bankingcommonsrv
        servicetype: backend
        version: v1
      
    spec:
      containers:
        - name: bankingcommonsrv
          image: image-registry.openshift-image-registry.svc:5000/garage-assets/bankingcommonsrv
          imagePullPolicy: Always
          readinessProbe: 
            tcpSocket:
              port: 9080
            initialDelaySeconds: 90  
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
            - containerPort: 9080
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 4m
              memory: 128Mi                
---
apiVersion: v1
kind: Service
metadata:
  name: bankingcommonsrv
  labels:
    app: bankingcommonsrv
spec:
  type: ClusterIP
  ports:
  - port: 9080
    name: http-9080
  selector:
    app: bankingcommonsrv
