k8s/istio-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: userservice-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bankingcommonsrv-destination
spec:
  host: bankingcommonsrv
  port:
    number: 9080
  subsets:
    - name: bankingcommonsrv
      labels:
        version: v1
      trafficPolicy: # --- enable for adding circuit breaker into DestinationRule
        loadBalancer:
          simple: LEAST_CONN
        connectionPool:
          tcp:
            maxConnections: 100
          http:
            http1MaxPendingRequests: 10
            maxRequestsPerConnection: 10
            maxRetries: 0
        outlierDetection:
          consecutive5xxErrors: 2
          interval: 30s
          baseEjectionTime: 10s
          maxEjectionTime: 60s 
          maxEjectionPercent: 50
          minHealthPercent: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bankingcommonsrv-vs
spec:
  hosts:
  - "*"
  gateways:
  - userservice-gateway
  http:
  - match:
    - uri:
        prefix: /bankingcommonsrv/
    route:
    - destination:
        host: bankingcommonsrv
        port:
          number: 9080
        subset: bankingcommonsrv
      weight: 100
    retries:
      attempts: 1
      retryOn: gateway-error,connect-failure,refused-stream
    timeout: 5s
    # fault: # --- enable for inject fault into the route
    #   delay:
    #     percentage:
    #       value: 33
    #     fixedDelay: 3s
